# obs

./: CMakeLists.txt  DBConnection.cpp  DBConnection.h  Daemon.cpp  Daemon.h  GenCMD.cpp  GenCMD.h  GeneralUtils.cpp  GeneralUtils.h  HandleAskPBX.cpp  HandleAskPBX.h  HandleUserMsgThread.cpp  HandleUserMsgThread.h  Makefile  Makefile.1.sample  Makefile.sample  Makefile1  MarkUp.cpp  Phone.cpp  Phone.h  README.md  RegAskMsg.cpp  RegAskMsg.h  SocketManager.cpp  SocketManager.h  StdString.h  UntiTool.cpp  Userconn.cpp  Userconn.h  Utils.h  connection_pool.cpp  connection_pool.h  core.4208  log-synthesizer.txt  log.cpp  log.h  logManager.cpp  logManager.h  logging.properties  obs.cpp  (+11 more)
include/: Token.h  speechSynthesizerRequest.h
install/: inst.sh  mkinst.sh
install-1/: inst.sh  mkinst.sh  xjobs
obs/: Agent.cpp  Agent.h  AgentOp.cpp  AgentOp.h  AskProxy-linux.cbp  AskProxy-linux.depend  AskProxy-linux.layout  AskProxy.cpp  AskProxy.h  AskProxyDlg.cpp  AskProxyDlg.h  CheckAgent.cpp  CheckAgent.h  CompletePort.cpp  CompletePort.h  GenCMD.cpp  GenCMD.h  GeneralUtils.h  HandSoftPhoneThread.cpp  HandSoftPhoneThread.h  HandleAskPBX  (2013-5-7).cpp  HandleAskPBX.cpp  HandleAskPBX.cpp~  HandleAskPBX.h  HandleWS.cpp  HandleWS.cpp~  HandleWS.h  HandleWebResponse.cpp  HandleWebResponse.h  MsgQueue.cpp  MsgQueue.h  Phone.cpp  Phone.h  QueueStatic.h  ResponseMsg.cpp  ResponseMsg.cpp~  ResponseMsg.h  SettingData.cpp  SettingData.h  SoftPhoneMsg.cpp  (+13 more)
obs/AskMsg/: AgentStateMsg.cpp  AgentStateMsg.h  BusyEvt.cpp  BusyEvt.h  ChannelStateMsg.cpp  ConfEvt.cpp  (+53 more)
tmp/: license.cpp  license.h
(+26 files in other folders)
